// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/ChannelMembersModal should match snapshot 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  >
    <div />
  </div>
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="channelMembersModalLabel"
      class="fade in modal"
      id="channelMembersModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal more-modal more-modal--action modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
              id="channelMembersModalLabel"
            >
              <span
                class="name"
              >
                channel_display_name
              </span>
               Members
            </h1>
            <button
              class="btn btn-primary"
              id="showInviteModal"
            >
               Add Members
            </button>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="loading-screen"
              style="position: relative;"
            >
              <div
                class="loading__content"
              >
                <p>
                  Loading
                </p>
                <div
                  class="round round-1"
                />
                <div
                  class="round round-2"
                />
                <div
                  class="round round-3"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/ChannelMembersModal should match snapshot with archived channel 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  >
    <div />
  </div>
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="channelMembersModalLabel"
      class="fade in modal"
      id="channelMembersModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal more-modal more-modal--action modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
              id="channelMembersModalLabel"
            >
              <span
                class="name"
              >
                channel_display_name
              </span>
               Members
            </h1>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="loading-screen"
              style="position: relative;"
            >
              <div
                class="loading__content"
              >
                <p>
                  Loading
                </p>
                <div
                  class="round round-1"
                />
                <div
                  class="round round-2"
                />
                <div
                  class="round round-3"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
